# webrust

./: .env.example  .gitignore  Cargo.toml  DEBUG_QUICK_REF.md  Dockerfile  ERROR_LOGGING_SUMMARY.md  GUIDE.md  IMPROVEMENTS_SUMMARY.md  MIGRATIONS.md  Makefile  ORBIT.md  PHASE_3_COMPLETION.md  QUEUES.md  QUICK_WINS_IMPLEMENTATION_REPORT.md  QUICK_WINS_SUMMARY.sh  README.md  SCHEDULER.md  bun.lockb  docker-compose.yml  package.json  tailwind.config.js  vite.config.js
.github/workflows/: deploy-docs.yml  release.yml
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
docs/: AUTH.md  BASICS.md  CACHE.md  COMMANDS.md  CONTROLLERS.md  CSRF.md  DATABASE.md  DEBUG_QUICK_REF.md  DEPLOYMENT.md  ERROR_LOGGING.md  ERROR_LOGGING_QUICK_REF.md  FEATURE_SUGGESTIONS.md  GUIDE.md  HTTP.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENTS.md  INERTIA.md  LIFECYCLE.md  LOGGING.md  MAIL.md  MAKE_PACKAGE_COMMAND.md  MIGRATIONS.md  NOTIFICATIONS.md  ORBIT.md  PACKAGES.md  PACKAGE_SYSTEM.md  QUEUES.md  QUICK_REFERENCE.md  RATE_LIMITING.md  ROUTES.md  SCHEDULER.md  SEEDING.md  STORAGE.md  TEMPLATES.md  TESTING.md  VALIDATION.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
examples/: complete_debug_example.rs  debug_demo.rs
migrations/: 20251123124606_create_user.sql  20251203000000_create_failed_jobs_table.sql  20251203000000_create_notifications_table.sql
public/css/: app.css
src/: cli.rs  database.rs  debug.rs  framework.rs  main.rs  prelude.rs  route.rs
src/cache/: file_driver.rs  memory_driver.rs  mod.rs  redis_driver.rs
src/commands/: make_package.rs  migrations.rs  mod.rs  routes.rs  tinker.rs
src/config/: app.rs  csrf.rs  database.rs  logging.rs  mail.rs  mod.rs  queue.rs  session.rs
src/console/: kernel.rs
src/controllers/: auth.rs  contact.rs  error.rs  home.rs  mod.rs  users.rs
src/database/: migrator.rs  seeder.rs
src/events/: dispatcher.rs  mod.rs
src/http/: error.rs  helpers.rs  ignition.rs  inertia.rs  middleware_helpers.rs  mod.rs  panic.rs  policies.rs  rate_limit_strategies.rs  rate_limiter.rs  resource_controller.rs  response.rs  validation.rs
src/models/: mod.rs  observer.rs  user.rs
src/orbit/: builder.rs  mod.rs  schema.rs
src/requests/: auth.rs
src/routes/: api.rs  mod.rs  web.rs
src/services/: auth.rs  console.rs  error_logger.rs  factory.rs  flash.rs  hash.rs  http.rs  log.rs  mail.rs  mod.rs  notification.rs  package_manager.rs  package_scaffold.rs  queue.rs  repository.rs  scheduler.rs  service_layer.rs  storage.rs  validation.rs
src/support/: arr.rs  mod.rs  str.rs  testing.rs
templates/: layout.rune.html  root.rune.html
templates/auth/: login.rune.html
templates/errors/: 404.rune.html
templates/home/: index.rune.html
(+12 files in other folders)
