[package]
name = "webrust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tera = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "macros", "chrono"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "fs", "catch-panic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
validator = { version = "0.18", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
notify = "6.1"
parking_lot = "0.12"
tower-sessions = { version = "0.12", features = ["signed"] }
bcrypt = "0.15"
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
rand = "0.8"
async-trait = "0.1.89"
