[package]
name = "webrust"
version = "0.1.0"
edition = "2021"

[features]
default = ["mysql"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tera = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "macros", "chrono", "migrate"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "fs", "catch-panic", "cors", "compression-full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
validator = { version = "0.18", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
notify = "6.1"
parking_lot = "0.12"
tower-sessions = { version = "0.12", features = ["signed"] }
bcrypt = "0.15"
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
rand = "0.8"
async-trait = "0.1.89"
heck = "0.5.0"
lettre = { version = "0.11.19", features = ["tokio1", "tokio1-native-tls", "builder"] }
redis = { version = "0.32.7", features = ["tokio-comp"] }
tokio-cron-scheduler = "0.15.1"
md5 = "0.8.0"
thiserror = "2.0.17"
tower-sessions-redis-store = "0.12"
tower-sessions-sqlx-store = { version = "0.12", features = ["mysql", "postgres", "sqlite"] }
reqwest = { version = "0.12.24", features = ["json", "multipart"] }
tracing-appender = "0.2.3"
anyhow = "1.0.100"
tower-livereload = "0.10.1"
bytes = "1.11.0"
uuid = { version = "1.19.0", features = ["v4"] }

[profile.dev]
opt-level = 0
debug = 1 # Line tables only, faster than full debug info
incremental = true
